--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,4 +4,31 @@
 }
 html, body {
     overflow-x: auto;
-}
+} 
+@keyframes slideInFromRight {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+
+  .rolling-text {
+    display: block;
+    width: 100%; /* Full width to allow text to roll across */
+    white-space: nowrap; /* Keep text in one line */
+    overflow: hidden; /* Hide text until it enters the screen */
+    position: relative;
+  }
+
+  .rolling-text::after {
+    content: 'Swipe ←';
+    display: inline-block;
+    /* padding-right: 100%; Prevent the text from bunching up */
+    animation: slideInFromRight 10s linear infinite; /* 10s for a slow roll, adjust as needed */
+    font-size: 24px; /* Adjust size as needed */
+    color: #FFF; /* White color */
+    /* Optional: Add a glow effect */
+    text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
+  }
