--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,22 +73,33 @@ h2 {
     50% { border-color: black; }
   }
   
-  h1 {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: 0.15em solid black; /* The typewriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Center the heading */
-    letter-spacing: 0.15em; /* Adjust letter spacing */
-    /* animation: 
-      typing 3.5s steps(30, end),
-      blink-caret 0.75s step-end infinite; */
-  }
+
   
   /* Optional: Adjust font and size */
   h1{
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
     font-size: 2em;
   }
   .hero {
     padding-top: 0;
+}
+
+
+.container img{
+  /* margin: 100px; */
+  cursor:zoom-in;
+}
+
+input[type=checkbox]{
+  display:none;
+}
+input[type=checkbox]:checked ~ label > img
+{
+  transform:scale(1.5);
+  cursor:zoom-out;
+  transition:transform 1s ease;
+}
+
+.formatter svg{
+  display: inline !important;
 }
