--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,6 +88,7 @@ h2 {
 .container img{
   /* margin: 100px; */
   cursor:zoom-in;
+  z-index: 100; 
 }
 
 input[type=checkbox]{
@@ -98,8 +99,25 @@ input[type=checkbox]:checked ~ label > img
   transform:scale(1.5);
   cursor:zoom-out;
   transition:transform 1s ease;
+  z-index: 999;
 }
 
 .formatter svg{
   display: inline !important;
+}
+
+.sidebar-pane{
+  z-index: 0 !important;
+
+}
+
+.main-pane{
+  z-index:10;
+}
+.right-sidebar-container{
+  z-index: 5 !important;
+}
+
+.header{
+  z-index:15;
 }
