--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -160,19 +160,19 @@ if (image) {
 
 	.skills {
     font-family: 'Press Start 2P';
-    font-size: clamp(var(--sl-text-sm), calc(0.25rem + 1.5vw), var(--sl-text-lg));
+    font-size: clamp(var(--sl-text-sm), calc(0.25rem + 1.5vw), var(--sl-text-2lg));
     margin: 0;
     height: 1.5em;
     overflow: hidden;
-    /* position: relative; */
 	margin: 0;
 	height: 1.5em;
+	width: 100%;
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	/* position: relative; */
+	position: relative;
 		}
 
 	.skill {
